<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.procsl</groupId>
    <artifactId>ping</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0</version>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
        <compiler.version>${java.version}</compiler.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springboot.version>3.2.1</springboot.version>
        <native-plugin.version>0.9.20</native-plugin.version>
        <springdoc.version>2.1.0</springdoc.version>
        <mapstruct.version>1.5.3.Final</mapstruct.version>
        <web.server.port>10000</web.server.port>
        <spring-dev>false</spring-dev>
    </properties>

    <modules>
        <module>ping-common</module>
        <module>ping-apt</module>
        <module>ping-parent</module>
        <module>ping-distribute</module>
        <module>ping-web</module>
        <module>ping-jpa</module>
        <module>ping-connect</module>
    </modules>

    <name>Ping 父模块</name>

    <dependencyManagement>

        <dependencies>
            <dependency>
                <!-- 从 Spring Boot 导入依赖管理 -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
                <scope>provided</scope>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-common</artifactId>
                <version>${springdoc.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-jpa</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-web</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-system</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-captcha</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-connect</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.procsl</groupId>
                <artifactId>ping-product</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.github.javafaker</groupId>
                <artifactId>javafaker</artifactId>
                <version>1.0.2</version>
                <scope>test</scope>
                <optional>true</optional>
                <exclusions>
                    <exclusion>
                        <groupId>org.yaml</groupId>
                        <artifactId>snakeyaml</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>com.github.jsonzou</groupId>
                <artifactId>jmockdata</artifactId>
                <version>4.3.0</version>
                <scope>test</scope>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>com.squareup</groupId>
                <artifactId>javapoet</artifactId>
                <version>1.13.0</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>3.29.2-GA</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>com.google.auto.service</groupId>
                <artifactId>auto-service</artifactId>
                <version>1.1.1</version>
                <optional>true</optional>
            </dependency>

            <dependency>
                <groupId>io.socket</groupId>
                <artifactId>socket.io-server</artifactId>
                <version>4.0.2.ping</version>
            </dependency>

            <dependency>
                <groupId>io.seruco.encoding</groupId>
                <artifactId>base62</artifactId>
                <version>0.1.3</version>
            </dependency>

            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>2.9.2</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.github.houbb</groupId>
                <artifactId>junitperf</artifactId>
                <version>2.0.7</version>
                <scope>test</scope>
            </dependency>

        </dependencies>

    </dependencyManagement>

    <build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <generatedSourcesDirectory>
                        ${project.build.directory}/generated-sources/java
                    </generatedSourcesDirectory>
                    <compilerVersion>${compiler.version}</compilerVersion>
                    <verbose>true</verbose>
                    <showWarnings>true</showWarnings>
                    <!--                    <fork>true</fork>-->
                    <!--保留参数名称-->
                    <maxmem>2048m</maxmem>
                    <compilerArgs>
                        <arg>-g</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>-Xlint:deprecation</arg>
                        <arg>-parameters</arg>
                        <arg>-proc:full</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.hibernate.orm.tooling</groupId>
                <artifactId>hibernate-enhance-maven-plugin</artifactId>
                <version>6.3.1.Final</version>
                <executions>
                    <execution>
                        <configuration>
                            <failOnError>true</failOnError>
                            <enableLazyInitialization>true</enableLazyInitialization>
                            <enableDirtyTracking>true</enableDirtyTracking>
                            <enableAssociationManagement>true</enableAssociationManagement>
                            <enableExtendedEnhancement>false</enableExtendedEnhancement>
                        </configuration>
                        <goals>
                            <goal>enhance</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M8</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <encoding>utf-8</encoding>
                    <!-- 解决Spring boot引起的profile失效问题 -->
                    <useDefaultDelimiters>true</useDefaultDelimiters>
                    <!-- 过滤后缀为p12、pem、pfx的证书文件 -->
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>p12</nonFilteredFileExtension>
                        <nonFilteredFileExtension>cer</nonFilteredFileExtension>
                        <nonFilteredFileExtension>pem</nonFilteredFileExtension>
                        <nonFilteredFileExtension>pfx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>jkx</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>

        </plugins>

        <finalName>${project.artifactId}-${project.version}</finalName>

        <testResources>
            <testResource>
                <directory>${project.basedir}/src/test/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>*.jks</exclude>
                    <exclude>*.pfx</exclude>
                    <exclude>*.txt</exclude>
                </excludes>
            </testResource>
        </testResources>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**</include>
                </includes>
                <excludes>
                    <exclude>*.jks</exclude>
                    <exclude>*.pfx</exclude>
                    <exclude>*.txt</exclude>
                </excludes>

            </resource>
        </resources>

    </build>

    <url>https://www.procsl.cn</url>

    <distributionManagement>
        <site>
            <id>ping</id>
            <url>https://github.com/procsl/ping</url>
        </site>
    </distributionManagement>


    <description>
        Ping项目, 基于DDD思想设计
    </description>


</project>
